# room-ceiling-editor

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  requirements.txt
dags/: ceiling_grid_pipeline_dag.py
data/input/: sample_grid.json
docs/Phase1/: phase1-completion-summary.md  phase1-plan.md
docs/Phase2/: phase2-completion-summary.md  phase2-implementation-plan.md
docs/Phase3/: phase3-completion-summary.md  phase3-implementation-plan.md
docs/Phase4/: phase4-completion-summary.md  phase4-implementation-plan.md
docs/Yak-shaving/: understanding-ML-mocks.md
examples/: run_observable_pipeline.py  run_with_metrics_server.py
src/: pyproject.toml  requirements.txt
src/api/: __init__.py  metrics_endpoint.py
src/models/: air_supply_model.py  base.py  light_models.py  smoke_detector_model.py
src/pipeline/: data_models.py  runner.py
src/utils/: __init__.py  logging_config.py  metrics.py
src/visualization/: __init__.py  grid_renderer.py
tests/: __init__.py  test_all_light_models.py  test_full_pipeline.py  test_light_model_a.py  test_phase1.py
