[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.8.1",
    "apache-airflow-providers-postgres>=5.14.0",
    "colorama>=0.4.6",
    "email-validator>=1.3.1",
    "fastapi>=0.121.0",
    "mcp[cli]>=1.20.0",
    "prometheus-client>=0.23.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
]
